--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "Near Inc <hello@nearprotocol.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "near-sdk-js": "^0.4.0-4",
+    "near-sdk-js": "^0.3.0",
     "superserial": "^0.3.0"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
     "@babel/core": "7.18.2",
     "@babel/preset-env": "7.18.2",
-    "@babel/preset-react": "7.17.12"
+    "@babel/preset-react": "7.17.12",
+    "typescript": "^4.7.4"
   }
 }
